Adding documentation and testing
