# src/controllers/user.roles.js
@@ -15,9 +15,12 @@ export default class rolesController {
       const userFound = await users.findOne({ where: { email: userEmail } });
       if (userFound && userFound.role !== 'super_admin') {
         await updateUser({ email: userEmail }, { role: userRole });
-        return res.status(201).send({ message: 'User role successfully updated' });
+        return res.status(200).send({ message: 'User role successfully updated' });
+      } if (userFound && userFound.role === 'super_admin') {
+        return res.status(404).send({ message: 'Either the user is a super admin or not registered' });
       }
-      return res.status(400).send({ message: 'User is a Super Admin' });
+      res.status(404).send({ message: 'Either User is a a super admin or not registered' });
+      return res;
     } catch (error) {
       return res.status(400).send({ error: 'User role not updated' });
     }
