# swagger.json
@@ -7,24 +7,37 @@
     },
     "host": "localhost:3000",
     "basePath": "/",
-    "schemes": ["http", "https"],
-    "consumes": ["application/json"],
-    "produces": ["application/json"],
+    "schemes": [
+        "http",
+        "https"
+    ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "paths": {
         "/api/users/signup": {
             "post": {
-                "tags": ["User"],
+                "tags": [
+                    "User"
+                ],
                 "summary": "Signup",
                 "description": "Create account",
                 "operationId": "createUser",
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "schema": {
-                        "$ref": "#/definitions/user"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/users"
+                        }
                     }
-                }],
-                "produces": ["application/json"],
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "responses": {
                     "201": {
                         "description": "OK"
@@ -32,21 +45,26 @@
                 }
             }
         },
-
         "/api/users/forgotPassword": {
             "post": {
-                "tags": ["Password"],
+                "tags": [
+                    "Password"
+                ],
                 "summary": "forgot password",
                 "description": "User forgot password",
                 "operationId": "forgot",
-                "parameters": [{
-                    "in": "body",
-                    "name": "body",
-                    "schema": {
-                        "$ref": "#/definitions/forgotPassword"
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/forgotPassword"
+                        }
                     }
-                }],
-                "produces": ["application/json"],
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "responses": {
                     "200": {
                         "description": "reset email sent successfully"
@@ -57,27 +75,33 @@
                 }
             }
         },
-
         "/api/users/resetPassword/{resetLinkToken}": {
             "post": {
-                "tags": ["Password"],
+                "tags": [
+                    "Password"
+                ],
                 "summary": "reset password",
                 "description": "User reset password",
                 "operationId": "reset",
-                "parameters": [{
-                    "name": "resetLinkToken",
-                    "in": "header",
-                    "required": true,
-                    "type": "string",
-                    "description": "token on the reset link"
-                }, {
-                    "in": "body",
-                    "name": "body",
-                    "schema": {
-                        "$ref": "#/definitions/resetPassword"
+                "parameters": [
+                    {
+                        "name": "resetLinkToken",
+                        "in": "header",
+                        "required": true,
+                        "type": "string",
+                        "description": "token on the reset link"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "schema": {
+                            "$ref": "#/definitions/resetPassword"
+                        }
                     }
-                }],
-                "produces": ["application/json"],
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "responses": {
                     "200": {
                         "description": "password reset successfully"
@@ -91,26 +115,30 @@
                 }
             }
         },
-        "/auth/google/" :{
+        "/auth/google/": {
             "get": {
-                "tags": ["Platforms Auth"],
-                
-               "responses": {
-                "200": {
-                    "description": "OK"
-                } 
-               } 
+                "tags": [
+                    "Platforms Auth"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         },
-        "/auth/facebook/" :{
+        "/auth/facebook/": {
             "get": {
-                "tags": ["Platforms Auth"],
-                
-               "responses": {
-                "200": {
-                    "description": "OK"
-                } 
-               } }},
+                "tags": [
+                    "Platforms Auth"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/users/signin": {
             "post": {
                 "tags": [
@@ -119,54 +147,134 @@
                 "summary": "User Login Endpoint",
                 "description": "sign-in the user",
                 "operationId": "signIn",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "User credentials needed to login in",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userLogin"
+                "/api/users/admin/settings": {
+                    "patch": {
+                        "tags": [
+                            "SuperAdmin"
+                        ],
+                        "summary": "Edit user roles",
+                        "description": "Change user roles",
+                        "operationId": "changerRole",
+                        "parameters": [
+                            {
+                                "in": "body",
+                                "name": "body",
+                                "description": "User credentials needed to login in",
+                                "required": true,
+                                "schema": {
+                                    "$ref": "#/definitions/userLogin"
+                                }
+                            }
+                        ],
+                        "responses": {
+                            "200": {
+                                "description": "user logged in successfully",
+                                "schema": {
+                                    "$ref": "#/definitions/roles"
+                                }
+                            },
+                            "produces": [
+                                "application/json"
+                            ],
+                            "responses": {
+                                "201": {
+                                    "description": "Role changed"
+                                },
+                                "400": {
+                                    "description": "Bad request"
+                                }
+                            }
                         }
                     }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "user logged in successfully"
+                },
+                "definitions": {
+                    "users": {
+                        "properties": {
+                            "first_name": {
+                                "type": "string"
+                            },
+                            "last_name": {
+                                "type": "string"
+                            },
+                            "phone": {
+                                "type": "string"
+                            },
+                            "email": {
+                                "type": "string"
+                            },
+                            "password": {
+                                "type": "string"
+                            }
+                        }
                     },
-                    "400": {
-                        "description": "Bad request"
+                    "forgotPassword": {
+                        "properties": {
+                            "email": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "resetPassword": {
+                        "properties": {
+                            "newPassword": {
+                                "roles": {
+                                    "properties": {
+                                        "userEmail": {
+                                            "type": "string"
+                                        },
+                                        "userRole": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "userLogin": {
+                        "type": "object",
+                        "properties": {
+                            "email": {
+                                "type": "string",
+                                "required": true
+                            },
+                            "password": {
+                                "type": "string",
+                                "required": true
+                            }
+                        }
                     }
                 }
             }
         },
-
-"/user/confirmation/{email}":{
-    "get":{
-        "tags": ["User"],
-        "summary": "confirm registrations",
-        "description": "Confirmation of registrations",
-        "operationId": "useremail",
-        "parameters": [{
-            "in": "path",
+        "/user/confirmation/{email}": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "confirm registrations",
+                "description": "Confirmation of registrations",
+                "operationId": "useremail",
+                "parameters": [
+                    {
+                        "in": "path",
                         "name": "email",
                         "required": true,
-            "schema": {
-                "$ref": "#/definitions/userUpdate"
-            }
-        }],
-        "produces": ["application/json"],
-        "responses": {
-            "200": {
-                "description": "confirmed"
+                        "schema": {
+                            "$ref": "#/definitions/userUpdate"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "confirmed"
+                    }
+                }
             }
         }
-
-    }
-}
-
     },
-
     "definitions": {
         "user": {
             "properties": {
@@ -187,7 +295,6 @@
                 }
             }
         },
-
         "forgotPassword": {
             "properties": {
                 "email": {
@@ -195,31 +302,31 @@
                 }
             }
         },
-
         "resetPassword": {
             "properties": {
                 "newPassword": {
                     "type": "string"
                 }
             }
-
-      },
-      "userLogin": {
-        "type": "object",
-        "properties": {
-            "email": {
-                "type": "string",
-                "required": true
-            },
-            "password": {
-                "type": "string",
-                "required": true
+        },
+        "userLogin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "required": true
+                },
+                "password": {
+                    "type": "string",
+                    "required": true
+                }
             }
-        }
-    },
-        "userUpdate":{
-            "properties":{
-                "email":{"type":"string"}
+        },
+        "userUpdate": {
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
             }
         }
     }
